# SpeechTraining

./: .gitignore  CMakeLists.txt  DocumentationTrainer.mdj  README.md  driver.cpp  main.cpp  requirements.txt  requirements_dl_science.txt  requirements_dl_science_19022024.txt  run_speech_recognition_ctc.py  test_004.ipynb  test_speech.py
.ipynb_checkpoints/: test_001-checkpoint.ipynb  test_002-checkpoint.ipynb
client/: package-lock.json  package.json
client/src/: App.tsx  Consts.ts  Types.ts  index.css
research/: RK2_TMO.ipynb  collection.py  database.csv  database.sql  info_audio.py  main.ipynb  main.py  research-Copy1.ipynb  research.ipynb  НИР ИУ5Ц-84Б Папин.docx
research/sentense/: AudioRecorderGUI.py  AudioRecorderWithDB.py  AutomaticSpeechRecognitionGoogle.py  AutomaticSpeechRecognitionMBART50.py  AutomaticSpeechRecognitionSaluteSpeech.py  AutomaticSpeechRecognitionYandex.py  AutomaticSpeechRecognitionrYandex.py  AutomaticSpeechRecognizerYandex.py  DB_PostgreSQL.py  Metrics.py  database.csv  database.sql  database_preprocessing.csv  database_preprocessing_metric.csv  df_average_metrics.csv  df_test_results.csv  main.py  test.py  (+8 more)
server/: create_table.sql  create_table1.sql
test/: EDA_metric_ASR.ipynb  df_full_metric.xlsx  df_grouped_metric.xlsx  df_grouped_metric_with_rating.xlsx  edit_folder.ipynb  edit_folders.sh  record_microphone.py  simple_audio.ipynb  speech_web.py  stream.py  test_005.ipynb  training_002.ipynb  training_003.ipynb  training_004.ipynb  training_RUSLAN_002.ipynb  training_common_voice_11_0_002.ipynb
web_backend/: create_table.sql
(+138 files in other folders)
